--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,15 @@ nav {
   padding: 1rem;
 }
 
+.container {
+  max-width: 600px;
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+
 .logo {
   color: white;
 }
