--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,27 @@ nav {
   margin: 1rem 0;
   width: 80%;
 }
+
+.fixed-button-container {
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+}
+
+.round-button {
+  font-size: x-large;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: green;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+}
+
+.round-button:hover {
+  background-color: #27b527;
+}
